Added a bunch of static images as placeholders for when my portfolio pieces are hosted.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
 	</div>
 	<div id="portfolio-container">
 		<h1>PORTFOLIO</h1>
+		<div id="portfolio-card-weather">
+		</div>
+		<div id="portfolio-card-quote">
+		</div>
+		<div id="portfolio-card-lamingtonlabs">
+		</div>
+		<div id="portfolio-card-qut">
+		</div>
+		<div id="portfolio-card-pingme">
+		</div>
 	</div>
 </body>
 </html>
