Fiddling around with the contact section and footer still.

--- a/index.html
+++ b/index.html
@@ -53,5 +53,24 @@
 		<div id="portfolio-card-pingme">
 		</div>
 	</div>
+	<div id="contact-container">
+		<h1>NEED TO GET IN TOUCH?</h1>
+		<h3>For a job or just a chat -- <span class="accent">Shoot me a message.</span></h3>
+		<p>
+			<i class="fa fa-envelope fa-fw" aria-hidden="true"></i>&nbsp; andrew.john.orourke@gmail.com &nbsp;
+			<i class="fa fa-phone fa-fw" aria-hidden="true"></i>&nbsp; 0406 615 268
+		</p>
+	</div>
+	<footer>
+		<div id="copyright">
+			&copy; 2017 Andrew O'Rourke
+		</div>
+		<div id="social-media-container">
+			<a href="#"><i class="fa fa-github" aria-hidden="true"></i>&nbsp;</a>
+			<a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i>&nbsp;</a>
+			<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i>&nbsp;</a>
+			<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+		</div>
+	</footer>
 </body>
 </html>
