Added WhatShouldIDoToday placeholder in portfolio.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 		</div>
 		<div id="portfolio-card-quote">
 		</div>
+		<div id="portfolio-card-whatshouldidotoday">
+		</div>
 		<div id="portfolio-card-lamingtonlabs">
 		</div>
 		<div id="portfolio-card-qut">
@@ -62,9 +64,9 @@
 		</p>
 	</div>
 	<footer>
-		<div id="copyright">
+<!-- 		<div id="copyright">
 			&copy; 2017 Andrew O'Rourke
-		</div>
+		</div> -->
 		<div id="social-media-container">
 			<a href="#"><i class="fa fa-github" aria-hidden="true"></i>&nbsp;</a>
 			<a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i>&nbsp;</a>
