No caps on call to action. More friendlier this way :)

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		</div>
 	</div>
 	<div id="contact-container">
-		<h1>NEED TO GET IN TOUCH?</h1>
+		<h1>Need to get in touch?</h1>
 		<h3>For a job or just a chat -- <span class="accent">Shoot me a message.</span></h3>
 		<p>
 			<i class="fa fa-envelope fa-fw" aria-hidden="true"></i>&nbsp; andrew.john.orourke@gmail.com &nbsp;
