Added appropriate hrefs to social media icons in footer

--- a/index.html
+++ b/index.html
@@ -64,14 +64,11 @@
 		</p>
 	</div>
 	<footer>
-<!-- 		<div id="copyright">
-			&copy; 2017 Andrew O'Rourke
-		</div> -->
 		<div id="social-media-container">
-			<a href="#"><i class="fa fa-github" aria-hidden="true"></i>&nbsp;</a>
-			<a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i>&nbsp;</a>
-			<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i>&nbsp;</a>
-			<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+			<a href="https://github.com/StringVariable" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>&nbsp;</a>
+			<a href="#" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i>&nbsp;</a>
+			<a href="https://twitter.com/AndyFromAU" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i>&nbsp;</a>
+			<a href="https://www.facebook.com/andy.orourke.31" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
 		</div>
 	</footer>
 </body>
