Fixed a lot of small things, have a pretty cool idea for a secondary navigation on scroll. but too sleepy.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 	<title>Andrew O'Rourke</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Ubuntu|Open+Sans" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script type="text/javascript" src="scripts.js"></script>
 	<script src="https://use.fontawesome.com/a50a8660d9.js"></script>
 </head>
 <body>
 	<div class="parallax">
-	<nav id="nav">
-		<a href="#" class="left">About me</a><a href="#" class="left">Portfolio</a><a href="#" class="right">Contact me</a>
+	<nav id="nav" class="navbar">
+		<div id="nav-link-container">
+			<a href="#about-container" id="about-me-link" class="left">About me</a><a href="#portfolio-container" id="portfolio-link" class="left">Portfolio</a><a href="#contact-container" id="contact-button" class="right">Contact me</a>
+		</div>
 	</nav>
 		<div id="title-container">
 			<h3>Hello, my name is Andrew O'Rourke and I'm a</h3>
@@ -35,7 +38,7 @@
 			<div class="header-container">
 				<h2>MY SKILLS</h2>
 			</div>
-			<p>Throughout my studies I've gained expertise in a variety of programming languages and development methodologies, which I've successfully put into practise on numerous occasions. I've outlined them below.</p>
+			<p>Throughout my studies I've gained expertise in a variety of programming languages and development methodologies, which I've successfully put into practise on numerous occasions. I've outlined my technological skills below.</p>
 			<p><b>Strong</b>: HTML, CSS, Javascript and GIT.</p>
 			<p><b>Knowledgeable</b>: JQuery and SQL.</p>
 		</div>
