Don't know if I changed anything after all that.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<div class="header-container">
 				<h2>MY SKILLS</h2>
 			</div>
-			<p>Throughout my studies I've gained expertise in a variety of programming languages and development methodologies, which I've successfully put into practise on numerous occasions. I've outlined my technological skills below.</p>
+			<p>Throughout my studies I've gained expertise in a variety of programming languages and development methodologies, which I've successfully put into practise on numerous occasions. I've outlined my technical skillset below.</p>
 			<p><b>Strong</b>: HTML, CSS, Javascript and GIT.</p>
 			<p><b>Knowledgeable</b>: JQuery and SQL.</p>
 		</div>
