--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script type="text/javascript" src="scripts.js"></script>
 	<script src="https://use.fontawesome.com/a50a8660d9.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	<div class="parallax">
@@ -45,17 +46,19 @@
 	</div>
 	<div id="portfolio-container">
 		<h1>PORTFOLIO</h1>
-		<div id="portfolio-card-weather">
-		</div>
-		<div id="portfolio-card-quote">
-		</div>
-		<div id="portfolio-card-whatshouldidotoday">
-		</div>
-		<div id="portfolio-card-lamingtonlabs">
-		</div>
-		<div id="portfolio-card-qut">
-		</div>
-		<div id="portfolio-card-pingme">
+		<div>
+			<div id="portfolio-card-weather">
+			</div>
+			<div id="portfolio-card-quote">
+			</div>
+			<div id="portfolio-card-whatshouldidotoday">
+			</div>
+			<div id="portfolio-card-lamingtonlabs">
+			</div>
+			<div id="portfolio-card-qut">
+			</div>
+			<div id="portfolio-card-pingme">
+			</div>
 		</div>
 	</div>
 	<div id="contact-container">
