Added my LinkedIn portfolio link in the footer

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	<footer>
 		<div id="social-media-container">
 			<a href="https://github.com/StringVariable" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>&nbsp;</a>
-			<a href="#" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i>&nbsp;</a>
+			<a href="https://www.linkedin.com/in/andrew-o-rourke-296307140/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i>&nbsp;</a>
 			<a href="https://twitter.com/AndyFromAU" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i>&nbsp;</a>
 			<a href="https://www.facebook.com/andy.orourke.31" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
 		</div>
