Title, about and portfolio are now tablet responsive. Still need to fix up some floating issues in the portfolio descriptions, but I'll fix that after I do the contact/footer containers.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<div class="header-container">
 				<h2>MY SKILLS</h2>
 			</div>
-			<p>Throughout my studies I've gained expertise in a variety of programming languages and development methodologies, which I've successfully put into practise on numerous occasions. I've outlined my technical skillset below.</p>
+			<p>Throughout my studies I've gained expertise in a variety of programming languages and development methodologies which I've successfully put into practise on numerous occasions. I've outlined my technical skillset below.</p>
 			<p><b>Strong</b>: HTML, CSS, Javascript and GIT.</p>
 			<p><b>Knowledgeable</b>: JQuery and SQL.</p>
 		</div>
@@ -80,7 +80,7 @@
 			<div id="lamingtonlabs-img">
 			</div>
 			<div class="portfolio-info-container">
-				<p><b class="accent">Project title:</b> LamingtonLabs <span class="tech-used"><b class="accent">Technologies used:</b> HTML, CSS, Font Awesome &amp; GIT.</span></p>
+				<p><b class="accent">Project title:</b> LamingtonLabs <span class="tech-used"><b class="accent">Technologies used:</b> HTML &amp; CSS.</span></p>
 				<p><b class="accent">Project description:</b> LamingtonLabs is a dessert recipe website focused on the cultural Australian dessert; Lamingtons. Javascript was not enabled for this project (all forms/inputs are simply placeholders).</p>
 				<p></p>
 			</div>
@@ -100,7 +100,7 @@
 			<div id="pingme-img">
 			</div>
 			<div class="portfolio-info-container">
-				<p><b class="accent">Project title:</b> PingMe UI designs <span class="tech-used"><b class="accent">Technologies used:</b> Photoshop, Android emulators</span></p>
+				<p><b class="accent">Project title:</b> PingMe UI designs <span class="tech-used"><b class="accent">Technologies used:</b> Photoshop, Android emulators.</span></p>
 				<p><b class="accent">Project description:</b> User interface designs for a conceptualised mobile application; PingMe. The application is designed to request the whereabouts of friends, colleagues, family, etc. It was built as part of a project specified by <a href="https://www.telstra.com.au/" target="_blank"><u>Telstra Australia</u></a>.</p>
 				<p></p>
 			</div>
