Fixed up some text formatting inside of the project cards

--- a/index.html
+++ b/index.html
@@ -50,9 +50,15 @@
 			<div id="weather-img">
 			</div>
 			<div class="portfolio-info-container">
-				<p><b class="accent">Project title:</b> The Weather Dashboard <span class="tech-used"><b class="accent">Technologies used:</b> HTML, CSS, Javascript, JQuery &amp; 2 APIs.</span></p>
-				<p><b class="accent">Project description:</b> The goal of this project was to implement a simple weather dashboard using the <a href="https://www.wunderground.com/" target="_blank"><u>wunderground</u></a> weather API. Some weather values are plugged into a Javascript radial graphing API developed by <a href="http://pablomolnar.github.io/radial-progress-chart/" target="_blank"><u>pablomolnar</u></a>.</p>
-				<p></p>
+				<div class="proj-title">
+					<p><b class="accent">Project title:</b> The Weather Dashboard</p>
+				</div> 
+				<div class="proj-tech">
+					<p><b class="accent">Technologies used:</b> HTML, CSS, Javascript, JQuery &amp; 2 APIs.</p>
+				</div>
+				<div class="proj-description">
+					<p><b class="accent">Project description:</b> The goal of this project was to implement a simple weather dashboard using the <a href="https://www.wunderground.com/" target="_blank"><u>wunderground</u></a> weather API. Some weather values are plugged into a Javascript radial graphing API developed by <a href="http://pablomolnar.github.io/radial-progress-chart/" target="_blank"><u>pablomolnar</u></a>.</p>
+				</div>
 			</div>
 		</div>
 
@@ -60,9 +66,15 @@
 			<div id="quote-img">
 			</div>
 			<div class="portfolio-info-container">
-				<p><b class="accent">Project title:</b> Random Quote Machine <span class="tech-used"><b class="accent">Technologies used:</b> HTML, CSS, Javascript, JQuery &amp; 1 API.</span></p>
-				<p><b class="accent">Project description:</b> This web app will generate a random quote for the user and give them the option to tweet that quote. A refresh button is present to allow the user to request a new quote.</p>
-				<p></p>
+				<div class="proj-title">
+					<p><b class="accent">Project title:</b> Random Quote Machine</p>
+				</div>
+				<div class="proj-tech">
+					<p class="tech-used"><b class="accent">Technologies used:</b> HTML, CSS, Javascript, JQuery &amp; 1 API.</p>
+				</div>
+				<div class="proj-description">
+					<p><b class="accent">Project description:</b> This web app will generate a random quote for the user and give them the option to tweet that quote. A refresh button is present to allow the user to request a new quote.</p>
+				</div>
 			</div>
 		</div>
 
@@ -70,9 +82,15 @@
 			<div id="whatshouldidotoday-img">
 			</div>
 			<div class="portfolio-info-container">
-				<p><b class="accent">Project title:</b> WhatShouldIDoToday? <span class="tech-used"><b class="accent">Technologies used:</b> HTML, CSS, Javascript, Node.js, Express, Bootstrap &amp; 3 APIs.</span></p>
-				<p><b class="accent">Project description:</b> WhatShouldIDoToday is a web application consisting of a mashup of 3 seperate APIs that use each other's data to suggest what a user should do on a given day. The project was built with a Node.js back-end complimented by a Bootstrapped front-end.</p>
-				<p></p>
+				<div class="proj-title">
+					<p><b class="accent">Project title:</b> WhatShouldIDoToday?</p>
+				</div>
+				<div class="proj-tech">
+					<p class="tech-used"><b class="accent">Technologies used:</b> HTML, CSS, Javascript, Node.js, Express, Bootstrap &amp; 3 APIs.</p>
+				</div>
+				<div class="proj-description">
+					<p><b class="accent">Project description:</b> WhatShouldIDoToday is a web application consisting of a mashup of 3 seperate APIs that use each other's data to suggest what a user should do on a given day. The project was built with a Node.js back-end complimented by a Bootstrapped front-end.</p>
+				</div>
 			</div>
 		</div>
 
@@ -80,9 +98,15 @@
 			<div id="lamingtonlabs-img">
 			</div>
 			<div class="portfolio-info-container">
-				<p><b class="accent">Project title:</b> LamingtonLabs <span class="tech-used"><b class="accent">Technologies used:</b> HTML &amp; CSS.</span></p>
-				<p><b class="accent">Project description:</b> LamingtonLabs is a dessert recipe website focused on the cultural Australian dessert; Lamingtons. Javascript was not enabled for this project (all forms/inputs are simply placeholders).</p>
-				<p></p>
+				<div class="proj-title">
+					<p><b class="accent">Project title:</b> LamingtonLabs</p>
+				</div>
+				<div class="proj-tech">
+					<p class="tech-used"><b class="accent">Technologies used:</b> HTML &amp; CSS.</p>
+				</div>
+				<div class="proj-description">
+					<p><b class="accent">Project description:</b> LamingtonLabs is a dessert recipe website focused on the cultural Australian dessert; Lamingtons. Javascript was not enabled for this project (all forms/inputs are simply placeholders).</p>
+				</div>
 			</div>
 		</div>
 
@@ -90,9 +114,15 @@
 			<div id="qut-img">
 			</div>
 			<div class="portfolio-info-container">
-				<p><b class="accent">Project title:</b> QUT Tennis redesign <span class="tech-used"><b class="accent">Technologies used:</b> HTML, CSS, Javascript, Bootstrap and Google maps API.</span></p>
-				<p><b class="accent">Project description:</b> This project was a redesign of an existing tennis club webpage.</p>
-				<p></p>
+				<div class="proj-title">
+					<p><b class="accent">Project title:</b> QUT Tennis redesign</p>
+				</div>
+				<div class="proj-tech">
+					<p class="tech-used"><b class="accent">Technologies used:</b> HTML, CSS, Javascript, Bootstrap and 1 API.</p>
+				</div>
+				<div class="proj-description">
+					<p><b class="accent">Project description:</b> This project was a redesign of an existing tennis club webpage.</p>
+				</div>
 			</div>
 		</div>
 
@@ -100,9 +130,15 @@
 			<div id="pingme-img">
 			</div>
 			<div class="portfolio-info-container">
-				<p><b class="accent">Project title:</b> PingMe UI designs <span class="tech-used"><b class="accent">Technologies used:</b> Photoshop, Android emulators.</span></p>
-				<p><b class="accent">Project description:</b> User interface designs for a conceptualised mobile application; PingMe. The application is designed to request the whereabouts of friends, colleagues, family, etc. It was built as part of a project specified by <a href="https://www.telstra.com.au/" target="_blank"><u>Telstra Australia</u></a>.</p>
-				<p></p>
+				<div class="proj-title">
+					<p><b class="accent">Project title:</b> PingMe UI designs</p>
+				</div>
+				<div class="proj-tech">
+					<p class="tech-used"><b class="accent">Technologies used:</b> Photoshop, Android emulators.</p>
+				</div>
+				<div class="proj-description">
+					<p><b class="accent">Project description:</b> User interface designs for a conceptualised mobile application; PingMe. The application is designed to request the whereabouts of friends, colleagues, family, etc. It was built as part of a project specified by <a href="https://www.telstra.com.au/" target="_blank"><u>Telstra Australia</u></a>.</p>
+				</div>
 			</div>
 		</div>
 	</div>
