Added hover and href properties to portfolio pieces.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Andrew O'Rourke</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Ubuntu|Open+Sans" rel="stylesheet">
+	<link rel="shortcut icon" type="image/png" href="images/favicon.ico"/>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script type="text/javascript" src="scripts.js"></script>
 	<script src="https://use.fontawesome.com/a50a8660d9.js"></script>
@@ -47,8 +48,13 @@
 	<div id="portfolio-container">
 		<h1>PORTFOLIO</h1>
 		<div class="portfolio-card">
-			<div id="weather-img">
-			</div>
+			<a href="#">
+				<div id="weather-img">
+					<div class="weather-hover">
+						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
+					</div>
+				</div>
+			</a>
 			<div class="portfolio-info-container">
 				<div class="proj-title">
 					<p><b class="accent">Project title:</b> The Weather Dashboard</p>
@@ -63,8 +69,13 @@
 		</div>
 
 		<div class="portfolio-card">
-			<div id="quote-img">
-			</div>
+			<a href="#">
+				<div id="quote-img">
+					<div class="quote-hover">
+						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
+					</div>
+				</div>
+			</a>
 			<div class="portfolio-info-container">
 				<div class="proj-title">
 					<p><b class="accent">Project title:</b> Random Quote Machine</p>
@@ -79,8 +90,13 @@
 		</div>
 
 		<div class="portfolio-card">
-			<div id="whatshouldidotoday-img">
-			</div>
+			<a href="#">
+				<div id="whatshouldidotoday-img">
+					<div class="whatshouldidotoday-hover">
+						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
+					</div>
+				</div>
+			</a>
 			<div class="portfolio-info-container">
 				<div class="proj-title">
 					<p><b class="accent">Project title:</b> WhatShouldIDoToday?</p>
@@ -95,8 +111,13 @@
 		</div>
 
 		<div class="portfolio-card">
-			<div id="lamingtonlabs-img">
-			</div>
+			<a href="#">
+				<div id="lamingtonlabs-img">
+					<div class="lamingtonlabs-hover">
+						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
+					</div>
+				</div>
+			</a>
 			<div class="portfolio-info-container">
 				<div class="proj-title">
 					<p><b class="accent">Project title:</b> LamingtonLabs</p>
@@ -111,8 +132,13 @@
 		</div>
 
 		<div class="portfolio-card">
-			<div id="qut-img">
-			</div>
+			<a href="#">
+				<div id="qut-img">
+					<div class="qut-hover">
+						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
+					</div>
+				</div>
+			</a>
 			<div class="portfolio-info-container">
 				<div class="proj-title">
 					<p><b class="accent">Project title:</b> QUT Tennis redesign</p>
@@ -127,8 +153,13 @@
 		</div>
 
 		<div class="portfolio-card">
-			<div id="pingme-img">
-			</div>
+			<a href="#">
+				<div id="pingme-img">
+					<div class="pingme-hover">
+						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
+					</div>
+				</div>
+			</a>
 			<div class="portfolio-info-container">
 				<div class="proj-title">
 					<p><b class="accent">Project title:</b> PingMe UI designs</p>
