Changed favicon. Man I'm procrastinating from 203.

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 			<a href="#">
 				<div id="qut-img">
 					<div class="qut-hover">
-						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
+						<p class="portfolio-overlay-text"><b>Temporarily unavailable</b></p>
 					</div>
 				</div>
 			</a>
