--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			</div>
 			<p>Throughout my studies I've gained expertise in a variety of programming languages and development methodologies which I've successfully put into practise on numerous occasions. I've outlined my technical skillset below.</p>
 			<p><b>Strong</b>: HTML, CSS, Javascript and GIT.</p>
-			<p><b>Knowledgeable</b>: JQuery and SQL.</p>
+			<p><b>Knowledgeable</b>: JQuery and NodeJS.</p>
 		</div>
 	</div>
 	<div id="portfolio-container">
