Added a new directory to hold all my current porfolio pieces

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<div id="portfolio-container">
 		<h1>PORTFOLIO</h1>
 		<div class="portfolio-card">
-			<a href="#">
+			<a href="projects/WeatherDashboard/index.html" target="_blank">
 				<div id="weather-img">
 					<div class="weather-hover">
 						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
@@ -58,7 +58,7 @@
 			<div class="portfolio-info-container">
 				<div class="proj-title">
 					<p><b class="accent">Project title:</b> The Weather Dashboard</p>
-				</div> 
+				</div>
 				<div class="proj-tech">
 					<p><b class="accent">Technologies used:</b> HTML, CSS, Javascript, JQuery &amp; 2 APIs.</p>
 				</div>
@@ -69,7 +69,7 @@
 		</div>
 
 		<div class="portfolio-card">
-			<a href="#">
+			<a href="projects/RandomQuoteMachine/index.html" target="_blank">
 				<div id="quote-img">
 					<div class="quote-hover">
 						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
@@ -90,10 +90,10 @@
 		</div>
 
 		<div class="portfolio-card">
-			<a href="#">
+			<a href="#whatshouldidotoday-img">
 				<div id="whatshouldidotoday-img">
 					<div class="whatshouldidotoday-hover">
-						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
+						<p class="portfolio-overlay-text"><b>Temporarily unavailable</b></p>
 					</div>
 				</div>
 			</a>
@@ -111,7 +111,7 @@
 		</div>
 
 		<div class="portfolio-card">
-			<a href="#">
+			<a href="projects/LamingtonLabs/index.html" target="_blank">
 				<div id="lamingtonlabs-img">
 					<div class="lamingtonlabs-hover">
 						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
@@ -132,7 +132,7 @@
 		</div>
 
 		<div class="portfolio-card">
-			<a href="#">
+			<a href="#qut-img">
 				<div id="qut-img">
 					<div class="qut-hover">
 						<p class="portfolio-overlay-text"><b>Temporarily unavailable</b></p>
@@ -153,7 +153,7 @@
 		</div>
 
 		<div class="portfolio-card">
-			<a href="#">
+			<a href="https://s3-ap-southeast-2.amazonaws.com/ping-me-pdf/Screen-flow.pdf" target="_blank">
 				<div id="pingme-img">
 					<div class="pingme-hover">
 						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
