Added a link to my resume

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 			<p><b>Strong</b>: HTML, CSS, Javascript and GIT.</p>
 			<p><b>Knowledgeable</b>: JQuery and NodeJS.</p>
 		</div>
+		<div id="resume-container">
+			<a href="https://s3-ap-southeast-2.amazonaws.com/andrew-orourke-resume/My-Resume.pdf" target="_blank"><i class="fa fa-file-text fa-fw" aria-hidden="true"></i>&nbsp; My resume</a>
+		</div>
 	</div>
 	<div id="portfolio-container">
 		<h1>PORTFOLIO</h1>
@@ -186,7 +189,7 @@
 			<a href="https://github.com/StringVariable" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>&nbsp;</a>
 			<a href="https://www.linkedin.com/in/andrew-o-rourke-296307140/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i>&nbsp;</a>
 			<a href="https://twitter.com/AndyFromAU" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i>&nbsp;</a>
-			<a href="https://www.facebook.com/andy.orourke.31" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+			<a href="https://www.facebook.com/andy.orourke.31" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i>&nbsp;</a>
 		</div>
 	</footer>
 </body>
