Finally figured out why the landing image looked so bad on mobile. It's fixed now.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Andrew O'Rourke</title>
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
-	<link rel="stylesheet" media="screen and (max-width: 700px)" href="styles/mobile.css" />
+	<link rel="stylesheet" media="screen and (max-width: 700px)" href="styles/mobile_v8.css" />
 	<link rel="stylesheet" media="screen and (min-width: 701px) and (max-width: 1150px)" href="styles/tablet.css" />
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Ubuntu|Open+Sans" rel="stylesheet">
 	<link rel="shortcut icon" type="image/png" href="images/favicon.ico"/>
