--- a/index.html
+++ b/index.html
@@ -74,27 +74,6 @@
 		</div>
 
 		<div class="portfolio-card">
-			<a href="projects/BestSuper/index.html" target="_blank">
-				<div id="super-img">
-					<div class="super-hover">
-						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
-					</div>
-				</div>
-			</a>
-			<div class="portfolio-info-container">
-				<div class="proj-title">
-					<p><b class="accent">Project title:</b> BestSuper</p>
-				</div>
-				<div class="proj-tech">
-					<p><b class="accent">Technologies used:</b> HTML, CSS</p>
-				</div>
-				<div class="proj-description">
-					<p><b class="accent">Project description:</b> This project was a simple implementation of a static, fake super annuation company with an eMagazine orientation. An accompanying <a href="">design rational document</a> is also available for viewing which details the website's target audience and design choices.</p>
-				</div>
-			</div>
-		</div>
-
-		<div class="portfolio-card">
 			<a href="projects/RandomQuoteMachine/index.html" target="_blank">
 				<div id="quote-img">
 					<div class="quote-hover">
@@ -111,6 +90,27 @@
 				</div>
 				<div class="proj-description">
 					<p><b class="accent">Project description:</b> This web app will generate a random quote for the user and give them the option to tweet that quote. A refresh button is present to allow the user to request a new quote.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="portfolio-card">
+			<a href="projects/BestSuper/index.html" target="_blank">
+				<div id="super-img">
+					<div class="super-hover">
+						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
+					</div>
+				</div>
+			</a>
+			<div class="portfolio-info-container">
+				<div class="proj-title">
+					<p><b class="accent">Project title:</b> BestSuper</p>
+				</div>
+				<div class="proj-tech">
+					<p><b class="accent">Technologies used:</b> HTML, CSS</p>
+				</div>
+				<div class="proj-description">
+					<p><b class="accent">Project description:</b> This project was a simple implementation of a static, fake super annuation company with an eMagazine orientation. An accompanying <a href="https://s3-ap-southeast-2.amazonaws.com/best-super-design-rational/Rational_document.pdf" target="_blank"><u>design rational document</u></a> is also available for viewing which details the website's target audience and design choices.</p>
 				</div>
 			</div>
 		</div>
