Cleaned up directory a bit.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>Andrew O'Rourke</title>
-	<link rel="stylesheet" type="text/css" href="styles/style.css">
-	<link rel="stylesheet" media="screen and (max-width: 700px)" href="styles/mobile_v8.css" />
+	<link rel="stylesheet" type="text/css" href="styles/style_v1.css">
+	<link rel="stylesheet" media="screen and (max-width: 700px)" href="styles/mobile_v9.css" />
 	<link rel="stylesheet" media="screen and (min-width: 701px) and (max-width: 1150px)" href="styles/tablet.css" />
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Ubuntu|Open+Sans" rel="stylesheet">
 	<link rel="shortcut icon" type="image/png" href="images/favicon.ico"/>
@@ -43,8 +43,8 @@
 				<h2>MY SKILLS</h2>
 			</div>
 			<p>Throughout my studies I've gained expertise in a variety of programming languages and development methodologies which I've successfully put into practise on numerous occasions. I've outlined my technical skillset below.</p>
-			<p><b>Strong</b>: HTML, CSS, Javascript and GIT.</p>
-			<p><b>Knowledgeable</b>: JQuery and NodeJS.</p>
+			<p><b>Strong</b>: HTML, CSS, Javascript, GIT and Adobe Photoshop.</p>
+			<p><b>Knowledgeable</b>: JQuery, NodeJS and Adobe Experience Design.</p>
 		</div>
 		<div id="resume-container">
 			<a href="https://s3-ap-southeast-2.amazonaws.com/andrew-orourke-resume/My-Resume.pdf" target="_blank"><i class="fa fa-file-text fa-fw" aria-hidden="true"></i>&nbsp; My resume</a>
