--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>Andrew O'Rourke</title>
-	<link rel="stylesheet" type="text/css" href="styles/style_v1.css">
-	<link rel="stylesheet" media="screen and (max-width: 700px)" href="styles/mobile_v9.css" />
+	<link rel="stylesheet" type="text/css" href="styles/style_v2.css">
+	<link rel="stylesheet" media="screen and (max-width: 700px)" href="styles/mobile_v1.css" />
 	<link rel="stylesheet" media="screen and (min-width: 701px) and (max-width: 1150px)" href="styles/tablet.css" />
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Ubuntu|Open+Sans" rel="stylesheet">
 	<link rel="shortcut icon" type="image/png" href="images/favicon.ico"/>
@@ -43,8 +43,8 @@
 				<h2>MY SKILLS</h2>
 			</div>
 			<p>Throughout my studies I've gained expertise in a variety of programming languages and development methodologies which I've successfully put into practise on numerous occasions. I've outlined my technical skillset below.</p>
-			<p><b>Strong</b>: HTML, CSS, Javascript, GIT and Adobe Photoshop.</p>
-			<p><b>Knowledgeable</b>: JQuery, NodeJS and Adobe Experience Design.</p>
+			<p><b>Strong</b>: HTML, CSS, JavaScript, GIT, and Adobe Photoshop.</p>
+			<p><b>Knowledgeable</b>: JQuery, NodeJS, Gulp, SASS/SCSS and Adobe Experience Design.</p>
 		</div>
 		<div id="resume-container">
 			<a href="https://s3-ap-southeast-2.amazonaws.com/andrew-orourke-resume/My-Resume.pdf" target="_blank"><i class="fa fa-file-text fa-fw" aria-hidden="true"></i>&nbsp; My resume</a>
@@ -65,7 +65,7 @@
 					<p><b class="accent">Project title:</b> The Weather Dashboard</p>
 				</div>
 				<div class="proj-tech">
-					<p><b class="accent">Technologies used:</b> HTML, CSS, Javascript, JQuery &amp; 2 APIs.</p>
+					<p><b class="accent">Technologies used:</b> HTML, CSS, JavaScript, JQuery &amp; 2 APIs.</p>
 				</div>
 				<div class="proj-description">
 					<p><b class="accent">Project description:</b> The goal of this project was to implement a simple weather dashboard using the <a href="https://www.wunderground.com/" target="_blank"><u>wunderground</u></a> weather API. Some weather values are plugged into a Javascript radial graphing API developed by <a href="http://pablomolnar.github.io/radial-progress-chart/" target="_blank"><u>pablomolnar</u></a>.</p>
@@ -86,7 +86,7 @@
 					<p><b class="accent">Project title:</b> Random Quote Machine</p>
 				</div>
 				<div class="proj-tech">
-					<p class="tech-used"><b class="accent">Technologies used:</b> HTML, CSS, Javascript, JQuery &amp; 1 API.</p>
+					<p class="tech-used"><b class="accent">Technologies used:</b> HTML, CSS, JavaScript, JQuery &amp; 1 API.</p>
 				</div>
 				<div class="proj-description">
 					<p><b class="accent">Project description:</b> This web app will generate a random quote for the user and give them the option to tweet that quote. A refresh button is present to allow the user to request a new quote.</p>
@@ -116,6 +116,27 @@
 		</div>
 
 		<div class="portfolio-card">
+			<a href="projects/WikiViewer/index.html" target="_blank">
+				<div id="wiki-img">
+					<div class="wiki-hover">
+						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
+					</div>
+				</div>
+			</a>
+			<div class="portfolio-info-container">
+				<div class="proj-title">
+					<p><b class="accent">Project title:</b> Wikipedia Viewer</p>
+				</div>
+				<div class="proj-tech">
+					<p><b class="accent">Technologies used:</b> HTML, SASS/SCSS, Gulp, JavaScript, JQuery, and 1 API. </p>
+				</div>
+				<div class="proj-description">
+					<p><b class="accent">Project description:</b> This application allows for users to find and browse Wikipedia articles based on their specified search parameters. </p>
+				</div>
+			</div>
+		</div>
+
+		<div class="portfolio-card">
 			<a href="#whatshouldidotoday-img">
 				<div id="whatshouldidotoday-img">
 					<div class="whatshouldidotoday-hover">
@@ -128,7 +149,7 @@
 					<p><b class="accent">Project title:</b> WhatShouldIDoToday?</p>
 				</div>
 				<div class="proj-tech">
-					<p class="tech-used"><b class="accent">Technologies used:</b> HTML, CSS, Javascript, Node.js, Express, Bootstrap &amp; 3 APIs.</p>
+					<p class="tech-used"><b class="accent">Technologies used:</b> HTML, CSS, JavaScript, Node.js, Express, Bootstrap &amp; 3 APIs.</p>
 				</div>
 				<div class="proj-description">
 					<p><b class="accent">Project description:</b> WhatShouldIDoToday is a web application consisting of a mashup of 3 seperate APIs that use each other's data to suggest what a user should do on a given day. The project was built with a Node.js back-end complimented by a Bootstrapped front-end.</p>
@@ -152,7 +173,7 @@
 					<p class="tech-used"><b class="accent">Technologies used:</b> HTML &amp; CSS.</p>
 				</div>
 				<div class="proj-description">
-					<p><b class="accent">Project description:</b> LamingtonLabs is a dessert recipe website focused on the cultural Australian dessert; Lamingtons. Javascript was not enabled for this project (all forms/inputs are simply placeholders).</p>
+					<p><b class="accent">Project description:</b> LamingtonLabs is a dessert recipe website focused on the cultural Australian dessert; Lamingtons. JavaScript was not enabled for this project (all forms/inputs are simply placeholders).</p>
 				</div>
 			</div>
 		</div>
@@ -170,7 +191,7 @@
 					<p><b class="accent">Project title:</b> QUT Tennis redesign</p>
 				</div>
 				<div class="proj-tech">
-					<p class="tech-used"><b class="accent">Technologies used:</b> HTML, CSS, Javascript, Bootstrap and 1 API.</p>
+					<p class="tech-used"><b class="accent">Technologies used:</b> HTML, CSS, JavaScript, Bootstrap and 1 API.</p>
 				</div>
 				<div class="proj-description">
 					<p><b class="accent">Project description:</b> This project was a redesign of an existing tennis club webpage.</p>
