--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Andrew O'Rourke</title>
-	<link rel="stylesheet" type="text/css" href="styles/style_v3.css">
+	<title>Andrew O'Rourke - Web Developer</title>
+	<link rel="stylesheet" type="text/css" href="styles/style_v4.css">
 	<link rel="stylesheet" media="screen and (max-width: 700px)" href="styles/mobile_v1.css" />
 	<link rel="stylesheet" media="screen and (min-width: 701px) and (max-width: 1150px)" href="styles/tablet.css" />
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Ubuntu|Open+Sans" rel="stylesheet">
@@ -11,6 +11,7 @@
 	<script type="text/javascript" src="scripts.js"></script>
 	<script src="https://use.fontawesome.com/a50a8660d9.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Andrew O'Rourke is a Web Developer and UI/UX Designer from Brisbane, Australia.">
 </head>
 <body>
 	<div class="parallax">
@@ -32,7 +33,7 @@
 			<p>Hi, my name is Andrew and I'm an aspiring web developer. I love to work with front-end web technologies and have a keen interest in user interface and user experience design. I'm currently completing my studies at Queensland University of Technology in Brisbane, Australia.</p>
 			<p>
 				<div id="about-me-summary">
-					<small><i class="fa fa-code fa-fw" aria-hidden="true"></i>&nbsp; Front End Devloper</small><br>
+					<small><i class="fa fa-code fa-fw" aria-hidden="true"></i>&nbsp; Front End Developer</small><br>
 					<small><i class="fa fa-paint-brush fa-fw" aria-hidden="true"></i>&nbsp; UI/UX Designer</small><br>
 					<small><i class="fa fa-graduation-cap fa-fw" aria-hidden="true"></i>&nbsp; Student</small>
 				</div>
