--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/style_v3.css">
 	<link rel="stylesheet" media="screen and (max-width: 700px)" href="styles/mobile_v1.css" />
 	<link rel="stylesheet" media="screen and (min-width: 701px) and (max-width: 1150px)" href="styles/tablet.css" />
+	<link rel="stylesheet" media="screen and (min-width: 1650px)" href="styles/large.css" />
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Ubuntu|Open+Sans" rel="stylesheet">
 	<link rel="shortcut icon" type="image/png" href="images/favicon.ico"/>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -30,12 +31,13 @@
 			<div class="header-container">
 				<h2>ABOUT ME</h2>
 			</div>
-			<p>Hi, my name is Andrew and I'm an aspiring web developer. I love to work with front-end web technologies and have a keen interest in user interface and user experience design. I'm currently completing my studies at Queensland University of Technology in Brisbane, Australia.</p>
+			<p>Hi, my name is Andrew and I'm a Web Developer. I love to work with front-end web technologies and have a keen interest in user interface and user experience design. In 2017 I graduated with Distinction
+				from Queensland University of Technology with a Bachelors of IT, majoring in Computer Science.</p>
 			<p>
 				<div id="about-me-summary">
 					<small><i class="fa fa-code fa-fw" aria-hidden="true"></i>&nbsp; Front End Developer</small><br>
 					<small><i class="fa fa-paint-brush fa-fw" aria-hidden="true"></i>&nbsp; UI/UX Designer</small><br>
-					<small><i class="fa fa-graduation-cap fa-fw" aria-hidden="true"></i>&nbsp; Student</small>
+					<small><i class="fa fa-graduation-cap fa-fw" aria-hidden="true"></i>&nbsp; Graduate</small>
 				</div>
 			</p>
 		</div>
@@ -44,8 +46,8 @@
 				<h2>MY SKILLS</h2>
 			</div>
 			<p>Throughout my studies I've gained expertise in a variety of programming languages and development methodologies which I've successfully put into practise on numerous occasions. I've outlined my technical skillset below.</p>
-			<p><b>Strong</b>: HTML, CSS, JavaScript, GIT, and Adobe Photoshop.</p>
-			<p><b>Knowledgeable</b>: JQuery, NodeJS, Gulp, SASS/SCSS and Adobe Experience Design.</p>
+			<p><b>Strong</b>: HTML, CSS, JavaScript, GIT, Adobe Experience Design, Adobe Photoshop.</p>
+			<p><b>Knowledgeable</b>: NodeJS, ReactJS, SASS/SCSS, JQuery</p>
 		</div>
 		<div id="resume-container">
 			<a href="https://s3-ap-southeast-2.amazonaws.com/andrew-orourke-resume/My-Resume.pdf" target="_blank"><i class="fa fa-file-text fa-fw" aria-hidden="true"></i>&nbsp; My resume</a>
@@ -53,6 +55,112 @@
 	</div>
 	<div id="portfolio-container">
 		<h1>PORTFOLIO</h1>
+
+		<div class="portfolio-card">
+			<a href="projects/WeatherDashboard/index.html" target="_blank">
+				<div id="icosian-website-img">
+					<div class="icosian-website-hover">
+						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
+					</div>
+				</div>
+			</a>
+			<div class="portfolio-info-container">
+				<div class="proj-title">
+					<p><b class="accent">Project title:</b> The Weather Dashboard</p>
+				</div>
+				<div class="proj-tech">
+					<p><b class="accent">Technologies used:</b> HTML, CSS, JavaScript, JQuery &amp; 2 APIs.</p>
+				</div>
+				<div class="proj-description">
+					<p><b class="accent">Project description:</b> The goal of this project was to implement a simple weather dashboard using the <a href="https://www.wunderground.com/" target="_blank"><u>wunderground</u></a> weather API. Some weather values are plugged into a Javascript radial graphing API developed by <a href="http://pablomolnar.github.io/radial-progress-chart/" target="_blank"><u>pablomolnar</u></a>.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="portfolio-card">
+			<a href="projects/WeatherDashboard/index.html" target="_blank">
+				<div id="icosian-img">
+					<div class="icosian-hover">
+						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
+					</div>
+				</div>
+			</a>
+			<div class="portfolio-info-container">
+				<div class="proj-title">
+					<p><b class="accent">Project title:</b> The Weather Dashboard</p>
+				</div>
+				<div class="proj-tech">
+					<p><b class="accent">Technologies used:</b> HTML, CSS, JavaScript, JQuery &amp; 2 APIs.</p>
+				</div>
+				<div class="proj-description">
+					<p><b class="accent">Project description:</b> The goal of this project was to implement a simple weather dashboard using the <a href="https://www.wunderground.com/" target="_blank"><u>wunderground</u></a> weather API. Some weather values are plugged into a Javascript radial graphing API developed by <a href="http://pablomolnar.github.io/radial-progress-chart/" target="_blank"><u>pablomolnar</u></a>.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="portfolio-card">
+			<a href="projects/WeatherDashboard/index.html" target="_blank">
+				<div id="cns-cloud-img">
+					<div class="cns-cloud-hover">
+						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
+					</div>
+				</div>
+			</a>
+			<div class="portfolio-info-container">
+				<div class="proj-title">
+					<p><b class="accent">Project title:</b> The Weather Dashboard</p>
+				</div>
+				<div class="proj-tech">
+					<p><b class="accent">Technologies used:</b> HTML, CSS, JavaScript, JQuery &amp; 2 APIs.</p>
+				</div>
+				<div class="proj-description">
+					<p><b class="accent">Project description:</b> The goal of this project was to implement a simple weather dashboard using the <a href="https://www.wunderground.com/" target="_blank"><u>wunderground</u></a> weather API. Some weather values are plugged into a Javascript radial graphing API developed by <a href="http://pablomolnar.github.io/radial-progress-chart/" target="_blank"><u>pablomolnar</u></a>.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="portfolio-card">
+			<a href="projects/WeatherDashboard/index.html" target="_blank">
+				<div id="scooter-img">
+					<div class="scooter-hover">
+						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
+					</div>
+				</div>
+			</a>
+			<div class="portfolio-info-container">
+				<div class="proj-title">
+					<p><b class="accent">Project title:</b> The Weather Dashboard</p>
+				</div>
+				<div class="proj-tech">
+					<p><b class="accent">Technologies used:</b> HTML, CSS, JavaScript, JQuery &amp; 2 APIs.</p>
+				</div>
+				<div class="proj-description">
+					<p><b class="accent">Project description:</b> The goal of this project was to implement a simple weather dashboard using the <a href="https://www.wunderground.com/" target="_blank"><u>wunderground</u></a> weather API. Some weather values are plugged into a Javascript radial graphing API developed by <a href="http://pablomolnar.github.io/radial-progress-chart/" target="_blank"><u>pablomolnar</u></a>.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="portfolio-card">
+			<a href="projects/WeatherDashboard/index.html" target="_blank">
+				<div id="fm-finance-img">
+					<div class="fm-finance-hover">
+						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
+					</div>
+				</div>
+			</a>
+			<div class="portfolio-info-container">
+				<div class="proj-title">
+					<p><b class="accent">Project title:</b> The Weather Dashboard</p>
+				</div>
+				<div class="proj-tech">
+					<p><b class="accent">Technologies used:</b> HTML, CSS, JavaScript, JQuery &amp; 2 APIs.</p>
+				</div>
+				<div class="proj-description">
+					<p><b class="accent">Project description:</b> The goal of this project was to implement a simple weather dashboard using the <a href="https://www.wunderground.com/" target="_blank"><u>wunderground</u></a> weather API. Some weather values are plugged into a Javascript radial graphing API developed by <a href="http://pablomolnar.github.io/radial-progress-chart/" target="_blank"><u>pablomolnar</u></a>.</p>
+				</div>
+			</div>
+		</div>
+
 		<div class="portfolio-card">
 			<a href="projects/WeatherDashboard/index.html" target="_blank">
 				<div id="weather-img">
@@ -234,7 +342,6 @@
 			<a href="https://github.com/StringVariable" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>&nbsp;</a>
 			<a href="https://www.linkedin.com/in/andrew-o-rourke-296307140/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i>&nbsp;</a>
 			<a href="https://twitter.com/AndyFromAU" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i>&nbsp;</a>
-			<a href="https://www.facebook.com/andy.orourke.31" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i>&nbsp;</a>
 		</div>
 	</footer>
 </body>
