UPDATE: Updated skills.

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 				<h2>MY SKILLS</h2>
 			</div>
 			<p>Throughout my studies I've gained expertise in a variety of programming languages and development methodologies which I've successfully put into practise on numerous occasions. I've outlined my technical skillset below.</p>
-			<p><b>Strong</b>: HTML, CSS, JavaScript, GIT, Adobe Experience Design, Adobe Photoshop.</p>
-			<p><b>Knowledgeable</b>: NodeJS, ReactJS, SASS/SCSS, JQuery</p>
+			<p><b>Strong</b>: HTML, CSS/SASS, JavaScript, GIT, Adobe Experience Design, Adobe Photoshop.</p>
+			<p><b>Knowledgeable</b>: NodeJS, React, AngularJS, Angular 2+</p>
 		</div>
 		<div id="resume-container">
 			<a href="https://s3-ap-southeast-2.amazonaws.com/andrew-orourke-resume/My-Resume.pdf" target="_blank"><i class="fa fa-file-text fa-fw" aria-hidden="true"></i>&nbsp; My resume</a>
