UPDATE: Style rename.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				from Queensland University of Technology with a Bachelors of IT, majoring in Computer Science.</p>
 			<p>
 				<div id="about-me-summary">
-					<small><i class="fa fa-code fa-fw" aria-hidden="true"></i>&nbsp; Front End Developer</small><br>
+					<small><i class="fa fa-code fa-fw" aria-hidden="true"></i>&nbsp; Software Developer</small><br>
 					<small><i class="fa fa-paint-brush fa-fw" aria-hidden="true"></i>&nbsp; UI/UX Designer</small><br>
 					<small><i class="fa fa-graduation-cap fa-fw" aria-hidden="true"></i>&nbsp; Graduate</small>
 				</div>
