UPDATE: Updated the icosian-io portfolio piece.

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
 			</a>
 			<div class="portfolio-info-container">
 				<div class="proj-title">
-					<p><b class="accent">Project title:</b> The Weather Dashboard</p>
+					<p><b class="accent">Project title:</b> Icosian Landing Page</p>
 				</div>
 				<div class="proj-tech">
-					<p><b class="accent">Technologies used:</b> HTML, CSS, JavaScript, JQuery &amp; 2 APIs.</p>
+					<p><b class="accent">Technologies used:</b> Adobe Experience Design</p>
 				</div>
 				<div class="proj-description">
-					<p><b class="accent">Project description:</b> The goal of this project was to implement a simple weather dashboard using the <a href="https://www.wunderground.com/" target="_blank"><u>wunderground</u></a> weather API. Some weather values are plugged into a Javascript radial graphing API developed by <a href="http://pablomolnar.github.io/radial-progress-chart/" target="_blank"><u>pablomolnar</u></a>.</p>
+					<p><b class="accent">Project description:</b> Landing page design for the Icosian platform.</p>
 				</div>
 			</div>
 		</div>
