UPDATE: Updated titles/descs of some of the newer pieces.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<h1>PORTFOLIO</h1>
 
 		<div class="portfolio-card">
-			<a href="projects/WeatherDashboard/index.html" target="_blank">
+			<a href="" target="_blank">
 				<div id="icosian-website-img">
 					<div class="icosian-website-hover">
 						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
@@ -73,90 +73,6 @@
 				</div>
 				<div class="proj-description">
 					<p><b class="accent">Project description:</b> Landing page design for the Icosian platform.</p>
-				</div>
-			</div>
-		</div>
-
-		<div class="portfolio-card">
-			<a href="projects/WeatherDashboard/index.html" target="_blank">
-				<div id="icosian-img">
-					<div class="icosian-hover">
-						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
-					</div>
-				</div>
-			</a>
-			<div class="portfolio-info-container">
-				<div class="proj-title">
-					<p><b class="accent">Project title:</b> The Weather Dashboard</p>
-				</div>
-				<div class="proj-tech">
-					<p><b class="accent">Technologies used:</b> HTML, CSS, JavaScript, JQuery &amp; 2 APIs.</p>
-				</div>
-				<div class="proj-description">
-					<p><b class="accent">Project description:</b> The goal of this project was to implement a simple weather dashboard using the <a href="https://www.wunderground.com/" target="_blank"><u>wunderground</u></a> weather API. Some weather values are plugged into a Javascript radial graphing API developed by <a href="http://pablomolnar.github.io/radial-progress-chart/" target="_blank"><u>pablomolnar</u></a>.</p>
-				</div>
-			</div>
-		</div>
-
-		<div class="portfolio-card">
-			<a href="projects/WeatherDashboard/index.html" target="_blank">
-				<div id="cns-cloud-img">
-					<div class="cns-cloud-hover">
-						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
-					</div>
-				</div>
-			</a>
-			<div class="portfolio-info-container">
-				<div class="proj-title">
-					<p><b class="accent">Project title:</b> The Weather Dashboard</p>
-				</div>
-				<div class="proj-tech">
-					<p><b class="accent">Technologies used:</b> HTML, CSS, JavaScript, JQuery &amp; 2 APIs.</p>
-				</div>
-				<div class="proj-description">
-					<p><b class="accent">Project description:</b> The goal of this project was to implement a simple weather dashboard using the <a href="https://www.wunderground.com/" target="_blank"><u>wunderground</u></a> weather API. Some weather values are plugged into a Javascript radial graphing API developed by <a href="http://pablomolnar.github.io/radial-progress-chart/" target="_blank"><u>pablomolnar</u></a>.</p>
-				</div>
-			</div>
-		</div>
-
-		<div class="portfolio-card">
-			<a href="projects/WeatherDashboard/index.html" target="_blank">
-				<div id="scooter-img">
-					<div class="scooter-hover">
-						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
-					</div>
-				</div>
-			</a>
-			<div class="portfolio-info-container">
-				<div class="proj-title">
-					<p><b class="accent">Project title:</b> The Weather Dashboard</p>
-				</div>
-				<div class="proj-tech">
-					<p><b class="accent">Technologies used:</b> HTML, CSS, JavaScript, JQuery &amp; 2 APIs.</p>
-				</div>
-				<div class="proj-description">
-					<p><b class="accent">Project description:</b> The goal of this project was to implement a simple weather dashboard using the <a href="https://www.wunderground.com/" target="_blank"><u>wunderground</u></a> weather API. Some weather values are plugged into a Javascript radial graphing API developed by <a href="http://pablomolnar.github.io/radial-progress-chart/" target="_blank"><u>pablomolnar</u></a>.</p>
-				</div>
-			</div>
-		</div>
-
-		<div class="portfolio-card">
-			<a href="projects/WeatherDashboard/index.html" target="_blank">
-				<div id="fm-finance-img">
-					<div class="fm-finance-hover">
-						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
-					</div>
-				</div>
-			</a>
-			<div class="portfolio-info-container">
-				<div class="proj-title">
-					<p><b class="accent">Project title:</b> The Weather Dashboard</p>
-				</div>
-				<div class="proj-tech">
-					<p><b class="accent">Technologies used:</b> HTML, CSS, JavaScript, JQuery &amp; 2 APIs.</p>
-				</div>
-				<div class="proj-description">
-					<p><b class="accent">Project description:</b> The goal of this project was to implement a simple weather dashboard using the <a href="https://www.wunderground.com/" target="_blank"><u>wunderground</u></a> weather API. Some weather values are plugged into a Javascript radial graphing API developed by <a href="http://pablomolnar.github.io/radial-progress-chart/" target="_blank"><u>pablomolnar</u></a>.</p>
 				</div>
 			</div>
 		</div>
@@ -241,6 +157,70 @@
 				</div>
 				<div class="proj-description">
 					<p><b class="accent">Project description:</b> This application allows for users to find and browse Wikipedia articles based on their specified search parameters. </p>
+				</div>
+			</div>
+		</div>
+
+
+		<div class="portfolio-card">
+			<a href="" target="_blank">
+				<div id="icosian-img">
+					<div class="icosian-hover">
+						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
+					</div>
+				</div>
+			</a>
+			<div class="portfolio-info-container">
+				<div class="proj-title">
+					<p><b class="accent">Project title:</b> Icosian UI Overhaul</p>
+				</div>
+				<div class="proj-tech">
+					<p><b class="accent">Technologies used:</b> HTML, CSS, AngularJS, Adobe Experience Design, Photoshop</p>
+				</div>
+				<div class="proj-description">
+					<p><b class="accent">Project description:</b> </p>
+				</div>
+			</div>
+		</div>
+
+		<div class="portfolio-card">
+			<a href="" target="_blank">
+				<div id="cns-cloud-img">
+					<div class="cns-cloud-hover">
+						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
+					</div>
+				</div>
+			</a>
+			<div class="portfolio-info-container">
+				<div class="proj-title">
+					<p><b class="accent">Project title:</b> CNS Cloud Website</p>
+				</div>
+				<div class="proj-tech">
+					<p><b class="accent">Technologies used:</b> HTML, CSS, Wordpress, Adobe Experience Design</p>
+				</div>
+				<div class="proj-description">
+					<p><b class="accent">Project description:</b> </p>
+				</div>
+			</div>
+		</div>
+
+		<div class="portfolio-card">
+			<a href="" target="_blank">
+				<div id="fm-finance-img">
+					<div class="fm-finance-hover">
+						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
+					</div>
+				</div>
+			</a>
+			<div class="portfolio-info-container">
+				<div class="proj-title">
+					<p><b class="accent">Project title:</b> FM Finance Website</p>
+				</div>
+				<div class="proj-tech">
+					<p><b class="accent">Technologies used:</b> HTML, CSS, Wordpress.</p>
+				</div>
+				<div class="proj-description">
+					<p><b class="accent">Project description:</b> </p>
 				</div>
 			</div>
 		</div>
